--- a/index.html
+++ b/index.html
@@ -201,6 +201,11 @@
           </div>
         </div>
       </div>
+      <!-- alert info -->
+      <div class="alert simple-alert">
+        <h3>Last update: 27/12</h3>
+        <a class="close">&times;</a>
+      </div>
 </body>
 <script src="script.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.2.0/anime.min.js"></script>
