--- a/index.html
+++ b/index.html
@@ -79,6 +79,16 @@
                             <li>pagine 84 - 85</li>
                             <li>pagine 84 - 101</li>
                         </ul>
+                    </li>
+                    <li>
+                      <ul>
+                        <li>Fare lavoro sulle <span class="highlighted">fonti</span> (<a href="https://drive.google.com/file/d/1wXO6FV71vPioFwiBI157DMuKlDdkvaBE/view">classroom</a>)
+                          <ul>
+                            <li>fare <b>testo scritto</b></li>
+                          </ul>
+                        </li>
+                      </ul>
+                    </li>
                 </ul>
               </div>
             </div>
@@ -134,7 +144,7 @@
                   Francese
                 </div>
                 <div class="expandable-card--sub-title">
-                  <p>10/01/2022</p>
+                  <p>10/01/2023</p>
                 </div>
               </div>
             </div>
@@ -173,7 +183,7 @@
                   Italiano
                 </div>
                 <div class="expandable-card--sub-title">
-                  <p>10/01/2022</p>
+                  <p>10/01/2023</p>
                 </div>
               </div>
             </div>
@@ -200,13 +210,77 @@
             </div>
           </div>
         </div>
+        <div id="profile-6" class="expandable-card">
+          <div cardContent>
+            <div collapsedContent>
+              <div class="expandable-card--left-col col">
+                <div class="expandable-card--profile-image" style="background: green;">
+                  MA
+                </div>
+              </div>
+              <div class="expandable-card--right-col col">
+                <div class="expandable-card--title">
+                  Matematica
+                </div>
+                <div class="expandable-card--sub-title">
+                  <p>11/01/2023</p>
+                </div>
+              </div>
+            </div>
+            <div expandedContent>
+              <ul>
+                <div class="card--content">
+                  <ul>
+                      <li>
+                        <span class="highlighted">Studiare</span> da p. 10608 a 1609
+                        <span class="highlighted">Esercizi</span>:
+                        <ul>
+                          <li>p. 1642
+                            <ul>
+                              <li>n 444 - 454 - 455 - 458 - 459 - 461 - 462 - 464 - 466 - 471 - 472 - 480 - 482 - 486</li>
+                            </ul>
+                          </li>
+                        </ul>
+                        <li><span class="highlighted">Studiare</span> p. 1610 a 1615 + es <a href="#dispensa">dispensa</a></li>
+                        <li><span class="highlighted">Esercizi</span>:</li>
+                        <ul>
+                          <li>n 332 - 342</li>
+                        </ul>
+                        <span class="highlighted">Esercizi</span> riepilogo derivate
+                        <ul>
+                          <li>p. 1645
+                            <ul>
+                              <li>es da 505 a 602</li>
+                            </ul>
+                          </li>
+                        </ul>
+                      </li>
+                      <li id="dispensa">
+                        Dispensa sulle applicazioni delle <b>derivate</b> alla <i>geometria</i> e alla <i>fisica</i>:
+                        <ul>
+                          <li>"<a href="https://drive.google.com/file/d/1kFP4bu_eHcjR0im4f01H3XV6iOdZeqxf/view">robba buona come al solito</a>"</li>
+                        </ul>
+                      </li>
+                  </ul>
+                </div>
+              </ul>
+            </div>
+          </div>
+        </div>
       </div>
       <!-- alert info -->
       <div class="alert simple-alert">
-        <h3>Last update: 27/12</h3>
+        <h3>Last update: 2/01</h3>
         <a class="close">&times;</a>
       </div>
 </body>
+<script>
+  $(".close").click(function() {
+  $(this)
+    .parent(".alert")
+    .fadeOut();
+});
+</script>
 <script src="script.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.2.0/anime.min.js"></script>
 </html>
